[gd_scene load_steps=3 format=3 uid="uid://dq0mdjxqj6agu"]

[ext_resource type="Script" path="res://npc/civilian/civilian_base.gd" id="1_ffqpq"]
[ext_resource type="PackedScene" uid="uid://crocg7eb6icni" path="res://npc/civilian/chicken_civ.tscn" id="2_fx5e8"]

[node name="civilian_base" type="CharacterBody2D"]
script = ExtResource("1_ffqpq")
chicken_scene = ExtResource("2_fx5e8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
animation = &""

[node name="CivHolder" type="Node" parent="."]

[node name="CivSpawnTimer" type="Timer" parent="."]
autostart = true

[node name="Start" type="Marker2D" parent="."]

[node name="End1" type="Area2D" parent="."]
position = Vector2(236, 44)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="NavAgent" type="NavigationAgent2D" parent="."]

[connection signal="timeout" from="CivSpawnTimer" to="." method="_on_civ_spawn_timer_timeout"]
[connection signal="area_entered" from="End1" to="." method="_on_end_reached"]
[connection signal="area_exited" from="End1" to="." method="_on_area_2d_area_exited"]
